maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:35: error: not found: value x
    if (aBiscuit(x,y)) {
                 ^JediEscaper:36: error: not found: value x
      T(0) = x
             ^